tests/lean/emptyc.lean.expected.out
emptyc.lean:19:0: error: ambiguous, possible interpretations 
  { x := 0 }
  
  HasEmptyc.emptyc
